modified:   android/app/src/main/AndroidManifest.xml 	modified:   ios/Runner/Info.plist 	modified:   lib/main.dart 	deleted:    lib/pages/test.dart 	modified:   linux/CMakeLists.txt 	modified:   macos/Runner/Configs/AppInfo.xcconfig 	modified:   web/index.html 	modified:   windows/runner/Runner.rc

--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "salary_cal" "\0"
+            VALUE "FileDescription", "UConvert" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "salary_cal" "\0"
+            VALUE "InternalName", "UConvert" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "salary_cal.exe" "\0"
-            VALUE "ProductName", "salary_cal" "\0"
+            VALUE "ProductName", "UConvert" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
