--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.8.4
   fluttericon: ^2.0.0
+  intl: ^0.17.0
+  age_calculator: ^1.0.0
   
 
 dev_dependencies:
